bin/testsuite/tests/compiler/src/errors/compiler5572.swg
#global testerror "Err0646"

//#[Swag.PrintBc]
#test
{
    var a = "toto"
    var c = a[4 to "1.5"]
}
